# hotel

./: .gitignore  .ipynb  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  test_data.sql
backend/: api.py  async.py  config.py  deps.py  main.py  stub.py
backend/crud/: __init__.py  base.py  booking.py  hotel.py  room.py  user.py
backend/endpoints/: booking.py  hotel.py  room.py  user.py
backend/enums/: __init__.py  user.py
backend/migrations/: env.py
backend/migrations/versions/: 7066fc0335da_add_field_price.py  f2c8b98d2b35_add_user.py  fa7ffefb046b_initial_migration.py
backend/models/: __init__.py  base.py  booking.py  hotel.py  room.py  user.py
backend/pkg/: errors.py  responses.py  utils.py
backend/pkg/auth/: __init__.py  dto.py  errors.py  service.py
backend/pkg/auth/middlewares/jwt/: errors.py  service.py
backend/pkg/auth/middlewares/jwt/base/: auth.py
backend/pkg/auth/transport/: requests.py  responses.py  router.py
backend/schemas/: __init__.py  base.py  booking.py  hotel.py  room.py  user.py
frontend/: package-lock.json  package.json
frontend/src/: App.js  index.js  utils.js
frontend/src/components/: About.js  Bookings.js  Login.js  Logout.js  Main.js  RoomList.js  Rooms.js
frontend/src/contexts/: AuthContext.js
frontend/src/css/: About.css  BookingForm.css  Bookings.css  Login.css  Main.css  Rooms.css
frontend/src/forms/: Booking.js
frontend/src/hooks/: Bookings.js  Rooms.js
frontend/src/pages/: Bookings.js
