[tool.poetry]
name = "hotel"
version = "0.1.0"
description = "ИС для ведения гостиничного бизнеса"
authors = ["blackmamba2004 <vasilsemen04@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.12.3"
fastapi = "0.115.6"
aiohappyeyeballs = "2.4.4"
aiohttp = "3.11.10"
aiosignal = "1.3.2"
alembic = "1.14.0"
annotated-types = "0.7.0"
anyio = "4.7.0"
asyncpg = "0.30.0"
attrs = "24.3.0"
build = "1.2.2.post1"
cachecontrol = "0.14.1"
certifi = "2024.12.14"
cffi = "1.17.1"
charset-normalizer = "3.4.0"
cleo = "2.1.0"
click = "8.1.7"
crashtest = "0.4.1"
cryptography = "44.0.0"
distlib = "0.3.9"
dulwich = "0.21.7"
fastjsonschema = "2.21.1"
filelock = "3.16.1"
frozenlist = "1.5.0"
greenlet = "3.1.1"
gunicorn = "23.0.0"
h11 = "0.14.0"
idna = "3.10"
installer = "0.7.0"
jaraco-classes = "3.4.0"
jeepney = "0.8.0"
keyring = "24.3.1"
mako = "1.3.8"
markupsafe = "3.0.2"
more-itertools = "10.5.0"
msgpack = "1.1.0"
multidict = "6.1.0"
packaging = "24.2"
pexpect = "4.9.0"
pkginfo = "1.12.0"
platformdirs = "4.3.6"
poetry = "1.8.5"
poetry-core = "1.9.1"
poetry-plugin-export = "1.8.0"
propcache = "0.2.1"
ptyprocess = "0.7.0"
pycparser = "2.22"
pydantic = "2.10.3"
pydantic-core = "2.27.1"
pyproject-hooks = "1.2.0"
rapidfuzz = "3.10.1"
requests = "2.32.3"
requests-toolbelt = "1.0.0"
secretstorage = "3.3.3"
shellingham = "1.5.4"
sniffio = "1.3.1"
sqlalchemy = "2.0.36"
starlette = "0.41.3"
tomlkit = "0.13.2"
trove-classifiers = "2024.10.21.16"
typing-extensions = "4.12.2"
urllib3 = "2.2.3"
uvicorn = "0.34.0"
virtualenv = "20.28.0"
yarl = "1.18.3"
pydantic-settings = "^2.7.0"
psycopg2-binary = "^2.9.10"
passlib = "^1.7.4"
pyjwt = "^2.10.1"
email-validator = "^2.2.0"
jinja2 = "^3.1.5"
dishka = "^1.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
